--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
   <link rel="stylesheet" href="node_modules/mdbootstrap/css/bootstrap.min.css" />
   <link rel="stylesheet" href="node_modules/mdbootstrap/css/mdb.min.css" />
   <link rel="stylesheet" href="node_modules/mdbootstrap/css/style.css" />
-  <title>React App</title>
+  <title>Ata Demirkıran</title>
 </head>
 
 <body>
